tests/baselines/reference/arrayAssignmentTest3.errors.txt
arrayAssignmentTest3.ts(12,16): error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.


==== arrayAssignmentTest3.ts (1 errors) ====
    // The following gives no error
    // Michal saw no error if he used number instead of B, 
    // but I do...
    class B {}
    
    class a {
        constructor(public x: string, public y: number, z: B[]) { }
    }
    
    
    
    var xx = new a(null, 7, new B());
                   ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
    
    